Fix: Extra space

--- a/src/styles.css
+++ b/src/styles.css
@@ -40,3 +40,6 @@ body {
   align-items: center;
   border: 1px solid black;
 }
+.section:first-child {
+  margin-top: 0;
+}
